Some addtional CSS examples

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
   <body>
     <h1>Chapter 19-22 Review Exercise</h1>
 
+    <p>Some content generate to pracice <span class="lang">HTML</span> and <span class="lang">CSS</span>.</p>
+
+    <div id="topics-container">
+      <h2>Topics Covered</h2>
+
+      <ul id="topics-list">
+        <li class="tool">Terminal</li>
+        <li class="lang">HTML</li>
+        <li class="lang">CSS</li>
+        <li class="tool">GitHub</li>
+        <li class="tool">Git</li>
+      </ul>
+    </div>
+
   </body>
 </html>
